# hyperkahler-ai

./: ARCHITECTURE.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
examples/: __init__.py  train_fused.py
hyperkahler/: __init__.py
hyperkahler/autoencoders/: __init__.py  convolutional.py  linear.py
hyperkahler/core/: __init__.py  geometry.py  quaternion.py
hyperkahler/fusion/: __init__.py  combinator.py
hyperkahler/training/: __init__.py  trainer.py
hyperkahler/transformers/: __init__.py  attention.py  stack.py
tests/: __init__.py  test_quaternion.py
